[package]
name = "mumble-web-proxy"
version = "0.1.1"
authors = ["Jonas Herzig <me@johni0702.de>"]
edition = "2018"

[dependencies]
argparse = "0.2.2"
bytes = "1"
byteorder = "1.2"
futures = { version = "0.3", features = ["compat", "io-compat"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
mumble-protocol = { version = "0.4", features = ["webrtc-extensions"] }
tokio-tungstenite = "0.21"
http = "1"
tungstenite = "0.21"
rtp = { git = "https://github.com/Skgland/rtp", rev = "83eb4dd", features = ["rfc5764-openssl"] }
libnice = "0.3"
webrtc-sdp = "0.3"
openssl = "0.10"
